fix: stars alignment and header overlap

--- a/client/src/components/view/common/header/header.scss
+++ b/client/src/components/view/common/header/header.scss
@@ -6,6 +6,7 @@ header {
     display: flex;
     align-items: center;
     padding: 1rem;
+    z-index: 1000;
 }
 
 h1 {
